--- a/style.css
+++ b/style.css
@@ -1,25 +1,37 @@
 :root {
-    --text-blue: hsl(238, 29%, 16%);
-    --text-dkblue: hsl(240, 6%, 50%);
-    --text-xdkblue: hsl(237, 12%, 33%);
-    --text-red: hsl(14, 88%, 65%);
-    --gradient-violet: hsl(273, 75%, 66%);
-    --gradient-blue: hsl(240, 73%, 65%);
-    --divider-blue: hsl(240, 5%, 91%);
+  --text-blue: hsl(238, 29%, 16%);
+  --text-dkblue: hsl(240, 6%, 50%);
+  --text-xdkblue: hsl(237, 12%, 33%);
+  --text-red: hsl(14, 88%, 65%);
+  --gradient-violet: hsl(273, 75%, 66%);
+  --gradient-blue: hsl(240, 73%, 65%);
+  --divider-blue: hsl(240, 5%, 91%);
 }
 
 html {
-    box-sizing: border-box;
+  box-sizing: border-box;
+  font-size: 100%;
 }
 
 *,
 *::before,
 *::after {
-    box-sizing: inherit;
+  box-sizing: inherit;
 }
 
 body {
-    margin: 0;
-    padding: 0;
-    font-family: 'Kumbh Sans', sans-serif;
+  min-height: 100vh;
+  margin: 0;
+  padding: 0;
+  font-family: 'Kumbh Sans', sans-serif;
+  background-image: linear-gradient(var(--gradient-blue), var(--gradient-violet));
+}
+
+.attribution {
+  font-size: 11px;
+  text-align: center;
+}
+
+.attribution a {
+  color: hsl(228, 45%, 44%);
 }
